Fixed some layout problems

--- a/Assignment1/WS_APP/static/css/search.css
+++ b/Assignment1/WS_APP/static/css/search.css
@@ -2,13 +2,17 @@
   overflow-x: auto;
   white-space: nowrap;
   max-width: 100%;
+  margin-top: -60px;
 }
+
 .card {
   display: inline-block;
   width: 18rem;
   margin: 10px;
   height: 100%;
 }
+
 .card-break {
   white-space: break-spaces;
+  min-height: 50px;
 }
